[package]
name = "iron_types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types and data structures for Iron Cage AI agent management"
repository = "https://github.com/.../iron_cage"
readme = "readme.md"
keywords = ["ai", "agent", "types", "safety", "llm"]
categories = ["data-structures", "development-tools"]

[features]
default = ["enabled"]
enabled = ["dep:serde", "dep:thiserror", "dep:uuid"]
telemetry = ["dep:tracing"]
full = ["enabled", "telemetry"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1.0"
