[project]
name = "iron-examples"
version = "0.1.0"
description = "Example library for Iron Cage with LangChain, CrewAI, and AutoGPT integrations"
authors = [
  {name = "Iron Cage Team"}
]
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "iron-sdk>=0.1.0",  # Depends on SDK layer
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-openai>=0.1.0"]
crewai = ["crewai>=0.1.0"]
autogpt = ["autogpt>=0.1.0"]
all = ["langchain>=0.1.0", "langchain-openai>=0.1.0", "crewai>=0.1.0", "autogpt>=0.1.0"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
