[project]
name = "iron-agent"
version = "0.1.0"
description = "Required dependencies for the lead search agent to work"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "iron-sdk",
    "iron-runtime",

    # LangChain Ecosystem (Modular)
    "langchain",            # Metapackage
    "langchain-core",       # Contains AgentExecutor, ChatPromptTemplate
    "langchain-openai",     # Contains ChatOpenAI
    "langchain-community",  # Contains useful tools and utilities

    # Utilities
    "pydantic>=2.0",               # For data validation
    "python-dotenv>=1.2.1",        # For environment variables
    "requests>=2.32.5",            # For general HTTP requests
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"
testpaths = ["tests"]

[tool.uv.sources]
iron-sdk = { path = "../../iron_sdk", editable = true }
iron-runtime = { path = "../../iron_runtime", editable = true }
