[project]
name = "iron-agent"
version = "0.2.0"
description = "Required dependencies for the lead search agent to work"
authors = [
  {name = "Iron Cage Team"}
]
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "iron-sdk",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.19",
    "langchain-openai==0.2.9",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
iron-sdk = { path = "../../iron_sdk", editable = true }
