[project]
name = "iron-agent"
version = "0.1.0"
description = "Required dependencies for the lead search agent to work"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "iron-sdk",
    "iron-runtime",

    # LangChain Ecosystem (Modular)
    "langchain==1.2.0",            # Metapackage
    "langchain-core==1.2.1",       # Contains AgentExecutor, ChatPromptTemplate
    "langchain-openai==1.1.3",     # Contains ChatOpenAI
    "langchain-community==0.4.1",  # Contains useful tools and utilities
    "langgraph==1.0.5",            # Contains create_react_agent

    # Utilities
    "pydantic==2.12.5",            # For data validation
    "python-dotenv>=1.2.1",        # For environment variables
    "requests>=2.32.5",            # For general HTTP requests
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"
testpaths = ["tests"]

[tool.uv.sources]
iron-sdk = { path = "../../iron_sdk", editable = true }
iron-runtime = { path = "../../iron_runtime", editable = true }
